app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-list/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-list/src/patmat.cal" on line 6:
                case l of
                     ^
case may not be exhaustive.

It would fail on pattern: [_, _, _, _, _]